[package]
name = "ytd-rs"
version = "0.1.6"
authors = ["Nils Pukropp <nils.pukropp@outlook.de>"]
edition = "2018"
license-file ="LICENSE"
description = "A simple wrapper for youtube-dl. Youtube-dl has to be installed on the system"
homepage = "https://github.com/Nirusu99/ytd-rs"
repository = "https://github.com/Nirusu99/ytd-rs"
readme = "README.md"

[features]
yt-dlp = []
youtube-dlc = []


[dependencies]
regex = "1.5"
thiserror = "1.0"
