[package]
name = "ytd-rs"
version = "0.2.1"
authors = ["Nils Pukropp <nils@narl.io>"]
edition = "2024"
license-file = "LICENSE"
description = "An async, full-featured wrapper for yt-dlp."
homepage = "https://github.com/Nirusu99/ytd-rs"
repository = "https://github.com/Nirusu99/ytd-rs"
readme = "README.md"

[dependencies]
regex = "1.11.1"
thiserror = "2.0.11"
log = "0.4.22"
serde_json = "1.0.138"

[dependencies.tokio]
version = "1.43.0"
features = [
    "process",
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
